--- a/members/libpt-py/Cargo.toml
+++ b/members/libpt-py/Cargo.toml
@@ -1,18 +1,12 @@
 [package]
 name = "libpt-py"
-publish.workspace = true
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-license.workspace = true
-description.workspace = true
-readme.workspace = true
-homepage.workspace = true
-repository.workspace = true
-keywords.workspace = true
-categories.workspace = true
+version = "0.3.11"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "libpt"
+crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.20.3", features = ["full"] }
+pyo3 = { version = "0.19.0", features = ["full", "extension-module"] }
