--- a/members/libpt-py/Cargo.toml
+++ b/members/libpt-py/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "libpt-py"
 version = "0.3.11"
-edition = "2021"
+edition.workspace = true
+
+[package.metadata.maturin]
+name = "libpt"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "libpt"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pyo3 = { version = "0.19.0", features = ["full", "extension-module"] }
+pyo3 = "0.19.0"
