--- a/members/libpt-py/Cargo.toml
+++ b/members/libpt-py/Cargo.toml
@@ -12,7 +12,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 libpt = { version = "0.3.11", path = "../.." }
-pyo3 = "0.19.0"
+pyo3 = { version = "0.19.0", features = ["full"] }
+anyhow.workspace = true
 
 [features]
 default = ["log", "core", "full"]
