--- a/members/libpt-py/Cargo.toml
+++ b/members/libpt-py/Cargo.toml
@@ -18,8 +18,6 @@ anyhow.workspace = true
 [features]
 default = ["log", "core", "full"]
 core = []
-full = ["default", "core", "math", "log", "bintols", "net"]
-math = ["libpt/math", "log"]
+full = ["default", "core", "log", "bintols"]
 log = ["libpt/log"]
 bintols = ["libpt/bintols", "log"]
-net = ["libpt/net", "log"]
