--- a/members/libpt-core/Cargo.toml
+++ b/members/libpt-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libpt-core"
 publish.workspace = true
-version.workspace = true
+version = "0.3.12"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
