--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,10 @@ categories = [
 [workspace.dependencies]
 anyhow = "1.0.79"
 thiserror = "1.0.56"
-libpt-core = { version = "0.3.12", path = "members/libpt-core" }
-libpt-bintols = { version = "0.3.12", path = "members/libpt-bintols" }
-libpt-log = { version = "0.3.12", path = "members/libpt-log" }
-libpt-py = { version = "0.3.12", path = "members/libpt-py" }
+libpt-core = { version = "0.4.0-alpha.1", path = "members/libpt-core" }
+libpt-bintols = { version = "0.4.0-alpha.1", path = "members/libpt-bintols" }
+libpt-log = { version = "0.4.0-alpha.1", path = "members/libpt-log" }
+libpt-py = { version = "0.4.0-alpha.1", path = "members/libpt-py" }
 
 [package]
 name = "libpt"
