--- a/members/libpt-bintols/Cargo.toml
+++ b/members/libpt-bintols/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libpt-bintols"
 publish.workspace = true
-version = "0.4.0-alpha.2"
+version = "0.4.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
