--- a/members/libpt-core/Cargo.toml
+++ b/members/libpt-core/Cargo.toml
@@ -14,5 +14,6 @@ categories.workspace = true
 
 [dependencies]
 anyhow = "1.0.79"
-cucumber = "0.20.2"
 libpt-log = { workspace = true }
+
+[dev-dependencies]
