--- a/.github/workflows/cargo.yaml
+++ b/.github/workflows/cargo.yaml
@@ -37,12 +37,8 @@ jobs:
         run: cargo clippy --fix --all-features --all-targets --workspace
       - name: cargo fmt
         run: cargo fmt --all
-      - name: install python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
       - name: cargo test
-        run: cargo test --all-features --all-targets --workspace
+        run: cargo test --all-features --all-targets --workspace && cargo test --all-features --workspace --doc
       - name: commit back to repository
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
