--- a/.github/workflows/cargo.yaml
+++ b/.github/workflows/cargo.yaml
@@ -22,6 +22,10 @@ jobs:
         run: |
           rustup component add rustfmt
           rustup component add clippy
+      - name: install python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
       - name: config custom registry
         run: |
           mkdir -p ~/.cargo/
