--- a/members/libpt-py/Cargo.toml
+++ b/members/libpt-py/Cargo.toml
@@ -19,7 +19,7 @@ name = "libpt"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-libpt = { version = "0.5.0", path = "../.." }
+libpt = { version = "0.5.0"}
 pyo3 = { version = "0.19.0", features = ["full"] }
 anyhow.workspace = true
 
