feat(cli::args): VerbosityLevel
VerbosityLevel lets you easily get a loglevel from repeated -v and -q
flags. Documentation included.

Refs: #84

--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -14,7 +14,7 @@ categories.workspace = true
 
 [features]
 default = ["log"]
-log = ["dep:libpt-log"]
+log = ["dep:libpt-log", "dep:log"]
 
 [dependencies]
 anyhow.workspace = true
@@ -23,4 +23,5 @@ comfy-table = "7.1.1"
 console = "0.15.8"
 dialoguer = "0.11.0"
 indicatif = "0.17.8"
-libpt-log = {workspace = true, optional = true}
+libpt-log = { workspace = true, optional = true }
+log = { version = "0.4.21", optional = true }
