chore: change LICENSE to GPL-3.0-or-later

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ publish = true
 version = "0.5.1"
 edition = "2021"
 authors = ["Christoph J. Scherr <software@cscherr.de>"]
-license = "MIT"
+license = "GPL-3.0-or-later"
 description = "Personal multitool"
 readme = "README.md"
 homepage = "https://git.cscherr.de/PlexSheep/pt"
