--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -22,6 +22,8 @@ clap = { version = "4.5.7", features = ["derive"] }
 comfy-table = "7.1.1"
 console = "0.15.8"
 dialoguer = "0.11.0"
+exitcode = "1.1.2"
+human-panic = "2.0.0"
 indicatif = "0.17.8"
 libpt-log = { workspace = true, optional = true }
 log = { version = "0.4.21", optional = true }
