--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -29,3 +29,4 @@ libpt-log = { workspace = true, optional = true }
 log = { version = "0.4.21", optional = true }
 shlex = "1.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
+thiserror.workspace = true
