--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -16,8 +16,8 @@ categories.workspace = true
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 
 [features]
-default = ["log"]
-log = ["dep:libpt-log", "dep:log"]
+default = []
+log = ["dep:log"]
 
 [dependencies]
 anyhow.workspace = true
@@ -29,7 +29,7 @@ embed-doc-image = "0.1.4"
 exitcode = "1.1.2"
 human-panic = "2.0.0"
 indicatif = "0.17.8"
-libpt-log = { workspace = true, optional = true }
+libpt-log = { workspace = true, optional = false }
 log = { version = "0.4.21", optional = true }
 shlex = "1.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
