--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-  ".",
-  "members/libpt-core",
-  "members/libpt-log",
-  "members/libpt-py",
-  "members/libpt-cli",
-]
+members = [".", "members/libpt-core", "members/libpt-log", "members/libpt-cli"]
 default-members = [".", "members/libpt-core"]
 
 [workspace.package]
@@ -20,11 +14,7 @@ readme = "README.md"
 homepage = "https://git.cscherr.de/PlexSheep/pt"
 repository = "https://git.cscherr.de/PlexSheep/pt"
 keywords = ["library"]
-categories = [
-  "command-line-utilities",
-  "development-tools",
-  "development-tools::ffi",
-]
+categories = ["command-line-utilities", "development-tools"]
 
 [workspace.dependencies]
 anyhow = "1.0.79"
@@ -55,7 +45,6 @@ full = ["default", "core", "log", "bintols"]
 log = ["dep:libpt-log"]
 bintols = ["dep:libpt-bintols", "log"]
 cli = ["dep:libpt-cli", "core", "log"]
-# py = ["dep:libpt-py"]
 
 [lib]
 name = "libpt"
