fix: features in main crate were bad

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ default = ["log", "core"]
 core = []
 full = ["default", "core", "log", "bintols"]
 log = ["dep:libpt-log"]
+log-crate = ["libpt-cli/log"]
 bintols = ["dep:libpt-bintols", "log"]
 cli = ["dep:libpt-cli", "core", "log"]
 
@@ -58,4 +59,4 @@ crate-type = [
 libpt-core = { workspace = true }
 libpt-bintols = { workspace = true, optional = true }
 libpt-log = { workspace = true, optional = true }
-libpt-cli = { workspace = true, optional = true }
+libpt-cli = { workspace = true, optional = true, features = ["log"] }
