--- a/members/libpt-core/Cargo.toml
+++ b/members/libpt-core/Cargo.toml
@@ -16,3 +16,7 @@ categories.workspace = true
 anyhow = "1.0.79"
 
 [dev-dependencies]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
