--- a/members/libpt-log/Cargo.toml
+++ b/members/libpt-log/Cargo.toml
@@ -22,3 +22,7 @@ libpt-core = { workspace = true, optional = false }
 
 [dev-dependencies]
 gag = "1.0.0"
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
