--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -12,9 +12,6 @@ repository.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
-[package.metadata.docs.rs]
-cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
-
 [features]
 default = []
 full = ["log"]
@@ -35,3 +32,7 @@ log = { version = "0.4.21", optional = true }
 shlex = "1.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
 thiserror.workspace = true
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
