--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -29,6 +29,7 @@ human-panic = "2.0.0"
 indicatif = "0.17.8"
 libpt-log = { workspace = true, optional = false }
 log = { version = "0.4.21", optional = true }
+serde = { version = "1.0.209", features = ["derive"] }
 shlex = "1.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
 thiserror.workspace = true
