--- a/members/libpt-cli/Cargo.toml
+++ b/members/libpt-cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libpt-cli"
 publish.workspace = true
-version = "0.2.1"
+version = "0.2.2-alpha.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -24,8 +24,6 @@ comfy-table = "7.1.1"
 console = "0.15.8"
 dialoguer = { version = "0.11.0", features = ["completion", "history"] }
 embed-doc-image = "0.1.4"
-exitcode = "1.1.2"
-human-panic = "2.0.0"
 indicatif = "0.17.8"
 libpt-log = { workspace = true, optional = false }
 log = { version = "0.4.21", optional = true }
